crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/025.cypher
UNWIND [1,2,3] AS x; MATCH (n) RETURN n
